--- a/assets/css/tonnage-calculator.css
+++ b/assets/css/tonnage-calculator.css
@@ -1,4 +1,4 @@
-.calcul_de_tonnage {
+.tonnage_calculator {
     display: flex;
     flex-wrap: wrap;
     max-width: 1250px;
@@ -23,15 +23,15 @@
     margin: 24px auto auto;
 }
 
-.form_calcul_de_tonnage, .img_calcul_de_tonnage_form, .result_calcul_de_tonnage, .img_calcul_de_tonnage_result {
+.form_tonnage_calculator, .img_tonnage_calculator_form, .result_tonnage_calculator, .img_tonnage_calculator_result {
     width: 50%;
 }
 
-.form_calcul_de_tonnage, .result_calcul_de_tonnage {
+.form_tonnage_calculator, .result_tonnage_calculator {
     padding: 30px 160px 32px 105px;
 }
 
-.calcul_de_tonnage h3:after {
+.tonnage_calculator h3:after {
     content: '';
     width: 100%;
     display: block;
@@ -44,7 +44,7 @@
 }
 
 
-.calcul_de_tonnage h3 {
+.tonnage_calculator h3 {
     width: fit-content;
     position: relative;
     z-index: 0;
@@ -57,7 +57,7 @@
     margin: 0;
 }
 
-.form_calcul_de_tonnage label {
+.form_tonnage_calculator label {
     font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -68,7 +68,7 @@
     margin-top: 24px;
 }
 
-.form_calcul_de_tonnage input,.form_calcul_de_tonnage select{
+.form_tonnage_calculator input,.form_tonnage_calculator select{
     margin-top: 8px;
     border: 1px solid #262626;
     box-shadow: 0 1px 3px rgba(230, 235, 241, 0.25);
@@ -102,7 +102,7 @@ img#img_info_bull_density {
     cursor: pointer;
 }
 
-.form_calcul_de_tonnage span.btn {
+.form_tonnage_calculator span.btn {
     font-family: 'Arca Majora 3', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -119,7 +119,7 @@ img#img_info_bull_density {
     float: right;
 }
 
-.img_calcul_de_tonnage_form img , .img_calcul_de_tonnage_result img{
+.img_tonnage_calculator_form img , .img_tonnage_calculator_result img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -127,7 +127,7 @@ img#img_info_bull_density {
     border-radius: 10px;
 }
 
-.img_calcul_de_tonnage_result {
+.img_tonnage_calculator_result {
     display: none;
 }
 
@@ -180,7 +180,7 @@ label.densite {
     transform: rotate(45deg);
 }
 
-.result_calcul_de_tonnage {
+.result_tonnage_calculator {
     display: none;
 }
 
@@ -212,11 +212,11 @@ h3.false_h3 {
     margin-top: 28px;
 }
 
-.result_calcul_de_tonnage > h3:nth-child(1){
+.result_tonnage_calculator > h3:nth-child(1){
     margin-top: 14px;
 }
 
-span#reset_calcul_de_tonnage {
+span#reset_tonnage_calculator {
     margin-top: 24px;
     font-family: 'Lato', sans-serif;
     font-style: normal;
