--- a/style.css
+++ b/style.css
@@ -98,3 +98,220 @@
     transition: all .35s;
     -webkit-transition: all .35s;
 }
+
+.affiche-produit a.woocommerce-LoopProduct-link.woocommerce-loop-product__link:after {
+    content: '';
+    width: 100%;
+    display: block;
+    position: absolute;
+    height: 50%;
+    background: linear-gradient(360deg, #474747 0%, rgba(71, 71, 71, 0) 100%);
+    border-radius: 0px 0px 5px 5px;
+    bottom: 0;
+}
+
+.affiche-produit .uael-woocommerce .woocommerce-LoopProduct-link{
+    line-height: 0;
+}
+
+.affiche-produit .uael-woocommerce .woocommerce-loop-product__link {
+    overflow: visible!important;
+}
+
+.affiche-produit h2.woocommerce-loop-product__title {
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+.affiche-produit .uael-woocommerce li.product .price {
+    margin-top: 16px;
+}
+
+.affiche-produit .uael-woocommerce .uael-woo-products-summary-wrap {
+    margin-top: -50px;
+    transition: all .35s;
+    padding: 0 1em;
+    background: #F5F5F5;
+}
+
+.affiche-produit span.price {
+    color: #262626!important;
+    font-family: "Lato", Sans-serif!important;
+    font-weight: 900!important;
+    font-size: 16px!important;
+    line-height: 24px!important;
+    text-align: center;
+}
+
+.affiche-produit span.woocommerce-Price-amount.amount {
+    font-family: "Arca Majora 3", Sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #BE9E67;
+}
+
+.h2_grey_back h2:after {
+    content: '';
+    width: 100%;
+    display: block;
+    position: absolute;
+    height: 25px;
+    background: #D9D9D9;
+    transform: rotate(-0.21deg);
+    bottom: -7px;
+    z-index: -1;
+}
+
+.h2_grey_back h2 {
+    width: fit-content;
+    position: relative;
+    z-index: 1;
+    color: #262626!important;
+    font-family: "Arca Majora 3", Sans-serif!important;
+    font-size: 32px!important;
+    font-weight: 900!important;
+    line-height: 40px!important;
+}
+
+h3.shopengine-billing-address-header{
+    width: fit-content;
+    position: relative;
+    z-index: 1;
+    color: #262626!important;
+    font-family: "Arca Majora 3", Sans-serif!important;
+    font-size: 32px!important;
+    font-weight: 900!important;
+    line-height: 40px!important;
+}
+
+h3.shopengine-billing-address-header:after{
+    content: '';
+    width: 100%;
+    display: block;
+    position: absolute;
+    height: 25px;
+    background: #D9D9D9;
+    transform: rotate(-0.21deg);
+    bottom: -7px;
+    z-index: -1;
+}
+
+.affiche-produit .uael-woo-skin-grid-franko .uael-product-actions {
+    right: 45%;
+    top: auto;
+    bottom: 46px;
+    transform: translate3d(0,0,0)!important;
+    -webkit-transform: translate3d(0,0,0)!important;
+    transition: all .35s;
+    -webkit-transition: all .35s;
+}
+
+.update_cart_row .actions {
+    padding: 0!important;
+}
+
+.single-product .cat-agregat table.variations th.label {
+    display: none;
+}
+
+.single-product .cat-agregat input.qty {
+    width: 85px;
+}
+
+.single-product .cat-agregat form.cart .variations select {
+    width: 300px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+.single-product .cat-agregat form.cart a.reset_variations {
+    display: none!important;
+}
+
+.single-product nav.woocommerce-breadcrumb {
+    margin: 0;
+}
+
+.avis_verifie_product_page {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+}
+
+.avis_verifie_product_page img {
+    width: 34px!important;
+    height: 34px!important;
+    object-fit: contain;
+}
+
+.avis_verifie_product_page > div {
+    height: 34px;
+}
+
+.avis_verifie_product_page > span {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    padding-top: 5px;
+}
+
+.woocommerce-error, .woocommerce-info, .woocommerce-message {
+    box-shadow: 2px 3px 10px 0 #00000066;
+}
+
+.woocommerce-message {
+    border: 3px solid #8fae1b;
+}
+
+.shopengine-advanced-search :is( .search-input-group button, .search-input-group ) {
+    background: white !important;
+    border-color: white !important;
+}
+
+.search-input-group button[type=submit] svg {
+    margin-top: 4px;
+}
+
+.king-account a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.king-account a img {
+    width: 17px;
+    height: 25px;
+}
+
+.king-account a span {
+    text-align: center;
+    color: white;
+    font-family: 'Lato', sans-serif;
+}
+
+div.woocommerce-variation.single_variation > div.woocommerce-variation-price > span > span > bdi{
+    font-family: 'Arca Majora 3', sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 40px;
+    color: #262626;
+}
+
+
+.single_variation_wrap .woocommerce-variation-add-to-cart.variations_button.woocommerce-variation-add-to-cart-disabled {
+    margin-top: 60px;
+}
+
+.single_variation_wrap .woocommerce-variation-price {
+    margin: 30px 0;
+}
