--- a/style.css
+++ b/style.css
@@ -6,22 +6,12 @@
  * Description:    A plain-vanilla &amp; lightweight theme for Elementor page builder
  */
 
- 
-
-
-
 
 /*
 COULEURS :
 GOLD : #BE9D68
 Gris foncé : #414042
-
-
-
-
 */
-
-
 
 /* Header */
 .elementor-top-section .elementor-icon-box-content:hover .elementor-icon-box-title a, .elementor-top-section .elementor-icon-box-content:hover .elementor-icon-box-title span{color:#BE9D68;}
@@ -31,13 +21,17 @@ ul#menu-2-bc4d358 .menu-item-121569::before {content: url('/wp-content/uploads/2
 ul#menu-2-bc4d358 .menu-item-121571::before {content: url('/wp-content/uploads/2023/11/picto-mobile-favoris.png');width: 24px;height: 24px;position: absolute;top: 10px;left: 10px;}
 ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a{padding-left: 40px;}
 
-/* GÉNÉRAL (Sur toute les pages)*/
+/* GÉNÉRAL (Sur toute les pages) */
+/* Fonts */
+.h2_grey_back h2 {width: fit-content;position: relative;z-index: 1;}
+.h2_grey_back h2:after {content: '';width: 100%;display: block;position: absolute;height: 25px;background: #D9D9D9;transform: rotate(-0.21deg);bottom: -7px;z-index: -1;}
 /* Newsletter formulaire */
 .newsletter-form form .elementor-form-fields-wrapper .elementor-field-group{width:50%;float:left;}
 .newsletter-form form .elementor-form-fields-wrapper .elementor-field-group.e-form__buttons{width:100%;}
 .newsletter-form form .elementor-form-fields-wrapper .elementor-field-group.e-form__buttons button[type="submit"]{width:100%;}
 /* Breadcrumbs */
 .breadcrumbs:before {content: url('/wp-content/uploads/2023/11/arrow-breadcrumb.png');position: absolute;width: 16px;height: 16px;top: 2px;left: -20px;}
+.breadcrumbs .woocommerce-breadcrumb > a{font-weight:500;}
 /* Grille de produits */
 .grille-produit .view-product-btn{display:none;}
 .grille-produit .uael-out-of-stock{display:none;}
@@ -63,6 +57,7 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 .page-id-563 .uael-form.uael-login-form input[type="password"]:focus{border: 1px solid black;}
 
 
+
 /* Contact */
 .page-id-455 .form-contact select{border-color: black !important;}
 .page-id-455 .form-contact input[type="text"]:focus,
@@ -83,10 +78,72 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
  
 
 /* Blog */
+.page-id-753 .blog-posts .uael-post__bg-wrap .uael-post__thumbnail{border-radius: 10px 10px 0px 0px;}
 .page-id-753 .blog-posts .uael-post__bg-wrap .uael-post__thumbnail a img{opacity:0.7;}
 .page-id-753 .blog-posts .uael-post__bg-wrap:hover .uael-post__thumbnail a img{opacity:1;}
 .page-id-753 .blog-posts .uael-post__bg-wrap .uael-post__content-wrap{position: relative;z-index: 999;min-height: 162px;}
-.page-id-753 .blog-posts .uael-post__bg-wrap .uuael-post__meta-data{}
+.page-id-753 .blog-posts .uael-post__bg-wrap .uael-post__meta-data{margin-top: 0px;top: 10px;margin-left: -56px;left: 50%;width: 100%;}
+
+/* Article */
+.single .breadcrumbs:before {content: url('/wp-content/uploads/2023/11/arrow-breadcrumb.png');position: absolute;width: 16px;height: 16px;top: 2px;left: -20px;}
+.single .sommaire.fixed{position: fixed;top: 60px;width: 340px;z-index: 1000;}
+.single .sommaire.fixedbottom {position: absolute;bottom: 60px;width: 340px;z-index: 1000;}
+.single .sommaire .elementor-toc__header{padding-bottom:0px;}
+.single .sommaire .elementor-toc__body{padding-left:13px;}
+.single .contenu-post a{color:#BE9D68;}
+.single .contenu-post h2{font-weight:900;}
+.single .blog-posts .uael-post__bg-wrap .uael-post__thumbnail{border-radius: 10px 10px 0px 0px;}
+.single .blog-posts .uael-post__bg-wrap .uael-post__thumbnail a img{opacity:0.7;}
+.single .blog-posts .uael-post__bg-wrap:hover .uael-post__thumbnail a img{opacity:1;}
+.single .blog-posts .uael-post__bg-wrap .uael-post__content-wrap{position: relative;z-index: 999;min-height: 162px;}
+.single .blog-posts .uael-post__bg-wrap .uael-post__meta-data{margin-top: 0px;top: 10px;margin-left: -56px;left: 50%;width: 100%;}
+.single .form-contact select{border-color: black !important;}
+.single .form-contact input[type="text"]:focus,
+.single .form-contact input[type="mail"]:focus,
+.single .form-contact input[type="tel"]:focus,
+.single .form-contact textarea:focus{border-color: black !important;}
+.single .form-contact textarea{min-height: 209px;}
+.single .elementor-field-option{color: #262626;}
+.single .elementor-field-option input[type="checkbox"]{display:none !important;}
+.single .elementor-field-option label{font-family: "Lato", Sans-serif;font-weight: 400;font-style: italic;cursor: pointer;display: inline-block;margin-right: 10px;position: relative;}
+.single .elementor-field-option label:before{font-size: calc( 20px / 1.2 );width: 20px;height: 20px;background-color: #FFFFFF;border-color: #A5AFB8;border-width: 1px;border-style: solid;border-radius: 4px;content: '';text-align: center;display: inline-block;;vertical-align: middle;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;box-sizing: content-box;margin-right: 10px;}
+.single .elementor-field-option input[type="checkbox"]:checked + label:after {content: '✔';position: absolute;top: 0;left: 5px;color: black;font-size: 20px;}
+.single .elementor-field-option label a{color:#BE9D68;}
+
+
+
+
+
+
+
+
+
+/* Page seo */
+.page-template-page-seo > main#content > header > h1.entry-title{margin: 60px auto;}
+.page-template-page-seo .elementor-widget-heading > .elementor-widget-container > h1.elementor-heading-title{color: #000000 !important;font-family: "Arca Majora 3", Sans-serif !important;font-size: 40px !important;font-weight: normal !important;line-height: 1.2em !important;}
+.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p{text-align: center !important;color: #000000 !important;font-family: "Arca Majora 3", Sans-serif !important;font-size: 24px !important;font-weight: 400 !important;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -94,18 +151,22 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 .single-product #pa_variation-conditionnement{width:inherit;}
 
 
+
  /* ancien css Agence-88 */
 .yellow {color: #BE9E67;}
 .grille-produit a.woocommerce-LoopProduct-link.woocommerce-loop-product__link:after {content: '';width: 100%;display: block;position: absolute;height: 50%;background: linear-gradient(360deg, #474747 0%, rgba(71, 71, 71, 0) 100%);border-radius: 0 0 5px 5px;bottom: 0;}
 .grille-produit .uael-woocommerce .woocommerce-LoopProduct-link{line-height: 0;}
 .grille-produit .uael-woocommerce .woocommerce-loop-product__link {overflow: visible!important;}
-.h2_grey_back h2:after {content: '';width: 100%;display: block;position: absolute;height: 25px;background: #D9D9D9;transform: rotate(-0.21deg);bottom: -7px;z-index: -1;}
-.h2_grey_back h2 {width: fit-content;margin: auto;position: relative;z-index: 1;color: #262626!important;font-family: "Arca Majora 3", Sans-serif!important;font-size: 32px!important;font-weight: 900!important;line-height: 40px!important;}
+
 .grille-produit .uael-woo-skin-grid-franko .uael-product-actions {right: 45%;top: auto;bottom: 46px;transform: translate3d(0,0,0)!important;-webkit-transform: translate3d(0,0,0)!important;transition: all .35s;-webkit-transition: all .35s;}
 
 
-
-
+body.modal-active{overflow: hidden;}
+.km-modal { z-index: 1000000;display: none;position: fixed;left: 0;top:0;width: 100%; height: 100%;overflow: auto;background-color: rgba(0,0,0,0.55); justify-content:center;align-items: center;}
+.km-modal.active{ display: flex;}
+.km-modal-dialog{ background-color: #fff;position: relative;outline: 0;border-radius: 5px;width: 520px;padding: 45px 60px;text-align: center;}
+.km-modal-dialog .km-modal-header{ margin-bottom: 25px;}
+.km-modal-close{ position: absolute;right: 15px;top:15px;border: none;display: inline-block; vertical-align: middle;  overflow: hidden;    height: 20px;    width: 20px;    text-decoration: none;    text-align: center;    cursor: pointer;    white-space: nowrap;    border:none;}
 
 /* RESPONSIVE */
 /* Menu mobile footer */
@@ -115,3 +176,4 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
     .footer .retractable::after {content: url('/wp-content/uploads/2023/11/fleche-footer-bas.png');position: absolute;top:0px;right: 0px;width: 16px;height: 9px;transition: transform 0.3s ease;}
     .footer .retractable.active::after {content: url('/wp-content/uploads/2023/11/fleche-footer-haut.png');}
 }
+
