--- a/assets/css/postcode-form.css
+++ b/assets/css/postcode-form.css
@@ -1,4 +1,4 @@
-#modal-postcode p {
+.modal-postcode p {
     font-family: 'Arca Majora 3';
     font-style: normal;
     font-weight: 700;
@@ -8,7 +8,7 @@
     margin-bottom: 24px;
 }
 
-.header_postcode>p {
+.header_postcode > p {
     font-family: 'Lato';
     font-style: italic;
     color: #fff;
@@ -21,26 +21,26 @@
     cursor: pointer;
 }
 
-#modal-postcode .km-form-fields{
+.modal-postcode .km-form-fields {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
-#modal-postcode input,
-#modal-postcode select {
+.modal-postcode input,
+.modal-postcode select {
     max-width: 150px;
-    margin-bottom:9px;
+    margin-bottom: 9px;
 }
 
 @media only screen and (max-width: 767px) {
-    #modal-postcode {
+    .modal-postcode {
         width: 296px;
     }
 }
 
-#modal_pc_close_btn {
+.modal_pc_close_btn {
     position: absolute;
     right: 20px;
     top: 20px;
@@ -58,27 +58,20 @@
     white-space: nowrap;
 }
 
-#modal-postcode-submit {
-    width: 100%;
-    background: linear-gradient(180deg, #BE9E67 0%, #A98951 100%);
-    border-radius: 5px;
-    padding: 9px 24px;
-    font-family: 'Arca Majora 3';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    color: #fff;
-    cursor: pointer;
-    margin-top:6px;
-    border: none;
+.btn-confirm {
+    position: relative;
+    width: 180px;
 }
 
-#zip_code_label {
-    width: 368px !important;
+.btn-confirm-loader {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.zip_code_label {
     text-align: center;
     color: red;
-    display: block;
-    transform: translateX(-96px);
-    margin-bottom: -16px;
+    margin-bottom:0;
 }
