--- a/style.css
+++ b/style.css
@@ -6,15 +6,114 @@
  * Description:    A plain-vanilla &amp; lightweight theme for Elementor page builder
  */
 
+ 
+
+
+
 
 /*
 COULEURS :
 GOLD : #BE9D68
 Gris foncé : #414042
+
+Provisoire 
 */
+.product .product-debug-meta{
+    background: yellow;
+    width: fit-content;
+    padding: 5px 10px;
+    margin-top: 20px;
+}
+.product .product-debug-meta h4{
+  font-size: 15px;
+}
+.product .product-debug-meta p {
+  margin-bottom:3px;
+}
+
+.btn{
+  border-radius: 5px;
+  padding: 9px 24px;
+  font-family: 'Arca Majora 3';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-span{
+  width:100%;
+  width: 100% !important;
+}
+
+.btn-primary{    
+  background: linear-gradient(180deg, #BE9E67 0%, #A98951 100%);
+  transition: all 0.2s ease;
+  color: #fff !important;
+  border: none!important;
+}
+
+.btn-primary:focus, .btn-primary:focus-visible{
+  border: none !important;
+  outline: 1px solid #937748;
+  box-shadow: 0 0 4px 3px #b1915954;
+}
+
+.btn-primary:hover{
+  background: linear-gradient(180deg, #be9f69 0%, #bb9c67 100%);
+}
+
+.btn-secondary{
+  color: #BE9E67!important;
+  border: 1px solid #BE9E67!important;
+  background-color:transparent;
+}
+.btn-link{
+  text-decoration: underline;;
+  color: #BE9E67!important;
+  background-color:transparent;
+  border: none!important;
+}
+
+.km-ecotaxe-message{
+  display: flex;
+}
+.elementor-widget-woocommerce-cart .woocommerce table.cart .km-ecotaxe-message p {
+font-size: 13px;
+}
+
+.elementor-widget-woocommerce-cart .woocommerce table.cart .km-ecotaxe-message img {
+  width: 48px !important;
+  height: 44px !important;
+  margin-right: 10px;
+}
+
+.woocommerce div.product form.cart .variations select option:disabled{
+  display: none;
+}
 
 /* Header */
 .elementor-top-section .elementor-icon-box-content:hover .elementor-icon-box-title a, .elementor-top-section .elementor-icon-box-content:hover .elementor-icon-box-title span{color:#BE9D68;}
+
+.king-account {text-align: center;}
+.king-account a {color: white;text-decoration: none;}
+.king-account a:hover {color: #BE9D68;}
+.king-account img {display: block;margin: 0 auto;}
+.king-account .king-account-content {display: block;margin-top: 8px;}
+
+
+/* Messages Woocommerce page produit, catégorie et panier */
+.woocommerce-notices-wrapper{margin: 0px;}
+.woocommerce-notices-wrapper .woocommerce-message{border-top-color: #BE9D68;margin: 40px 0px 0px 0px;}
+.woocommerce-notices-wrapper .woocommerce-message::before{color: #BE9D68;}
+.woocommerce-notices-wrapper .woocommerce-message a.button{background-color:#BE9D68;color: white;font-weight:400;}
+.woocommerce-notices-wrapper .woocommerce-error{border-top-color: #BE9D68;}
+.woocommerce-notices-wrapper .woocommerce-error::before{color: #BE9D68;}
+.woocommerce-error{border-top-color: #BE9D68;}
 
 /* Menu mobile */
 ul#menu-2-bc4d358 .menu-item-121569::before {content: url('/wp-content/uploads/2023/11/picto-mobile-user.png');width: 18px;height: 20px;position: absolute;top: 10px;left: 10px;}
@@ -119,9 +218,41 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 
 
 /* Page seo */
-.page-template-page-seo > main#content > header > h1.entry-title{margin: 60px auto;}
+.page-template-page-seo > main#content > header > h1.entry-title{margin: 60px auto;font-family: "Arca Majora 3", Sans-serif;font-size: 40px;font-weight: 900;line-height: 1.2em;text-align:center;}
 .page-template-page-seo .elementor-widget-heading > .elementor-widget-container > h1.elementor-heading-title{color: #000000 !important;font-family: "Arca Majora 3", Sans-serif !important;font-size: 40px !important;font-weight: normal !important;line-height: 1.2em !important;}
-.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p{text-align: center !important;color: #000000 !important;font-family: "Arca Majora 3", Sans-serif !important;font-size: 24px !important;font-weight: 400 !important;}
+.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p{/*text-align: center !important;color: #000000 !important;font-family: "Arca Majora 3", Sans-serif !important;font-size: 24px !important;font-weight: 400 !important;*/}
+.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p > a{color:#BE9D68;}
+.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p > a:hover{color:#BE9D68;text-decoration:underline;}
+.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p > span > a{color:#BE9D68;}
+.page-template-page-seo > main#content > .page-content > .elementor > section.elementor-top-section > .elementor-container > .elementor-top-column > .elementor-widget-wrap > .elementor-widget-text-editor > .elementor-widget-container > p > span > a:hover{color:#BE9D68;text-decoration:underline;}
+.page-template-page-seo .elementor-widget-button a.elementor-button:hover{color:white !important;}
+.page-template-page-seo ul.products.elementor-grid{margin-bottom: 40px !important;}
+.page-template-page-seo ul.products.elementor-grid img.attachment-woocommerce_thumbnail{opacity: 0.7;transition: all 0.3s ease;}
+.page-template-page-seo ul.products.elementor-grid li.product:hover img.attachment-woocommerce_thumbnail{opacity: 1;}
+.page-template-page-seo ul.products.elementor-grid li.product h2.woocommerce-loop-product__title{color:#262626;}
+.page-template-page-seo ul.products.elementor-grid li.product h2.woocommerce-loop-product__title:hover{color:#BE9D68 !important;}
+.page-template-page-seo ul.products.elementor-grid li.product span.woocommerce-Price-amount.amount{font-weight: 700;color:#262626;}
+.page-template-page-seo ul.products.elementor-grid li.product a.button{background-color:#BE9D68;color:white;}
+.page-template-page-seo ul.products.elementor-grid li.product a.button:hover{background-color:#BE9D68;color:white;}
+.page-template-page-seo .elementor-widget-call-to-action .elementor-cta .elementor-cta__content{background-color:#494949 !important;margin-bottom:60px;}
+.page-template-page-seo .elementor-widget-call-to-action .elementor-cta .elementor-cta__content h2.elementor-cta__title{color:white;font-family: "Arca Majora 3", Sans-serif;font-weight: 900;line-height: 1.2em;font-size: 22px;}
+.page-template-page-seo .elementor-widget-call-to-action .elementor-cta .elementor-cta__content .elementor-cta__description{color:white;font-family: "Arca Majora 3", Sans-serif;line-height: 1.2em;font-size: 18px;}
+.page-template-page-seo .elementor-widget-call-to-action .elementor-cta .elementor-cta__content .elementor-cta__button-wrapper a{color:white !important;}
+.page-template-page-seo section.elementor-section > .elementor-container > .elementor-column > .elementor-widget-wrap > .elementor-widget > .elementor-widget-container > h2,
+.page-template-page-seo section.elementor-section > .elementor-container > .elementor-column > .elementor-widget-wrap > .elementor-widget > .elementor-widget-container > h3{color:#262626;}
+.page-template-page-seo form.elementor-form label, .page-template-page-seo form.elementor-form input{color:#262626 !important;}
+
+/* Catégorie */
+.archive .grille-categorie form.woocommerce-ordering select{border: inherit;width: 150px;}
+.archive .grille-categorie ul.products{grid-template-columns: repeat(4, 1fr) !important;}
+.archive .grille-categorie li.product a.button{display:none;}
+.archive .grille-categorie li.product img.attachment-woocommerce_thumbnail{opacity: 0.7;transition: all 0.3s ease;}
+.archive .grille-categorie li.product:hover img.attachment-woocommerce_thumbnail{opacity: 1;}
+.archive .grille-categorie h2.woocommerce-loop-product__title{}
+.archive .grille-categorie h2.woocommerce-loop-product__title:hover{color:#BE9D68 !important;}
+.archive .grille-categorie li.product span.price{font-weight: 700;color:#262626;}
+.archive .grille-categorie li.product span.price span.woocommerce-Price-amount{color:#BE9D68;}
+.archive .elementor-widget-text-editor .elementor-widget-container p a{color:#BE9D68;}
 
 
 
@@ -129,6 +260,123 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 
 
 
+/* Single Produit */
+.single-product .verified-review {display: flex;flex-direction: row;align-items: center;justify-content: flex-start;width: fit-content;}
+.single-product .verified-review > img{width:40px;}
+.single-product .verified-review .headerStars{margin-left: 5px;}
+.single-product .verified-review .headerStars > div {display: flex;align-items: center;}
+.single-product .verified-review .netreviews_bg_stars_big.headerStars{height: 100%;max-height:100%; min-height:100%; display:flex; align-items:center;}
+.single-product .product .header_postcode p{color:#4D4D4D;font-family:Lato;font-weight:400;font-size:16px;}
+.single-product .elementor-add-to-cart table tbody tr td{background-color: transparent;}
+.single-product .elementor-add-to-cart table tbody tr th.label, .single-product .elementor-add-to-cart table tbody tr label{display:none;}
+.single-product .informations-livraison .elementor-accordion-item{border-left:inherit;border-right:inherit;}
+.single-product .informations-livraison .elementor-accordion-item .elementor-tab-content{border:inherit;}
+
+.single-product .woocommerce-variation-add-to-cart .quantity .qty{width: 82px;padding:.5rem;}
+.single-product .woocommerce-variation-add-to-cart button[type="submit"].single_add_to_cart_button{background-color:#BE9D68 !important;}
+
+.single-product .produits-similaires form.woocommerce-ordering select{border: inherit;width: 150px;}
+.single-product .produits-similaires li.product a span.onsale{background-color:#BE9D68;}
+.single-product .produits-similaires li.product a.button{display:none;}
+.single-product .produits-similaires li.product img.attachment-woocommerce_thumbnail{opacity: 0.7;transition: all 0.3s ease;}
+.single-product .produits-similaires li.product:hover img.attachment-woocommerce_thumbnail{opacity: 1;}
+.single-product .produits-similaires h2.woocommerce-loop-product__title{text-align: inherit;}
+.single-product .produits-similaires h2.woocommerce-loop-product__title:hover{color:#BE9D68 !important;}
+.single-product .produits-similaires li.product span.price{font-weight: 700;color:#262626;}
+.single-product .produits-similaires li.product span.price span.woocommerce-Price-amount{color:#BE9D68;}
+.single-product .produits-similaires li.product span.price ins{font-weight: 400;text-decoration:inherit;}
+.single-product .produits-similaires li.product span.price ins span.woocommerce-Price-amount{color: #BE9D68 !important;}
+
+
+
+
+
+
+
+
+
+/* Sidebar dynamique panier */
+.uael-mc-offcanvas .uael-mc-offcanvas__title{color: #262626;font-family: "Arca Majora 3", Sans-serif;font-size: 32px;font-weight: 900;line-height: 1.2em;width: fit-content;position: relative;z-index: 1;}
+.uael-mc-offcanvas .uael-mc-offcanvas__title:after{content: '';width: 100%;display: block;position: absolute;height: 25px;background: #D9D9D9;transform: rotate(-0.21deg);bottom: -7px;z-index: -1;}
+.uael-mc-offcanvas__header .uael-mc-offcanvas__header-badge{color:white;height: 30px;font-size: 16px;color: white;width: 30px;}
+.uael-mc-offcanvas__items .woocommerce-cart-form__contents .product-name a{color:#BE9D68;}
+.uael-mc-offcanvas__items .elementor-menu-cart__footer-buttons a{background-color:#BE9D68;}
+
+
+/* Panier */
+.shopengine-cart .e-cart__column-start{}
+.shopengine-cart .e-cart__column-end .e-cart__column-inner .e-cart-section .cart-collaterals .cart_totals h2{color: #262626;font-family: "Arca Majora 3", Sans-serif;font-size: 32px;font-weight: 900;line-height: 1.2em;width: fit-content;position: relative;z-index: 1;}
+.shopengine-cart .e-cart__column-end .e-cart__column-inner .e-cart-section .cart-collaterals .cart_totals h2:after{content: '';width: 100%;display: block;position: absolute;height: 25px;background: #D9D9D9;transform: rotate(-0.21deg);bottom: 2px;z-index: -1;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container{/*grid-template-columns: 70% 30%;*/}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end{width: 320px;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column.e-cart__column-end {justify-self: end;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end.fixed-top {position: fixed;top: 0px;z-index: 1000;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end.fixed-bottom{align-self: end;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end .e-sticky-right-column .e-cart-totals{box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);}
+
+
+
+
+
+
+
+
+
+
+/* Mentions légales */
+.page-id-1975 .faq-mentions-legales .elementor-accordion-item{border-top:inherit;border-left:inherit;border-right:inherit;}
+.page-id-1975 .faq-mentions-legales .elementor-accordion-item .elementor-tab-content{border:inherit;}
+
+
+
+
+.btn-confirm-loader, .btn-confirm-loader:before, .btn-confirm-loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    animation-fill-mode: both;
+    animation: bblFadInOut 1.8s infinite ease-in-out;
+  }
+  .btn-confirm-loader {
+    display: none;
+    color: #FFF;
+    font-size: 6px;
+    position: relative;
+    text-indent: -9999em;
+    transform: translateZ(0);
+    animation-delay: -0.16s;
+  }
+  .btn-confirm-loader:before,
+  .btn-confirm-loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+  }
+  .btn-confirm-loader:before {
+    left: -3.5em;
+    animation-delay: -0.32s;
+  }
+  .btn-confirm-loader:after {
+    left: 3.5em;
+  }
+
+  .modal-actions{
+    gap: 1rem;
+    margin-top:1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-actions.inline{
+    flex-direction: row;
+  }
+  
+  @keyframes bblFadInOut {
+    0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
+    40% { box-shadow: 0 2.5em 0 0 }
+  }
+      
 
 
 
@@ -161,7 +409,7 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 .grille-produit .uael-woo-skin-grid-franko .uael-product-actions {right: 45%;top: auto;bottom: 46px;transform: translate3d(0,0,0)!important;-webkit-transform: translate3d(0,0,0)!important;transition: all .35s;-webkit-transition: all .35s;}
 
 
-body.modal-active{overflow: hidden;}
+body.modal-open{overflow: hidden!important;}
 .km-modal { z-index: 1000000;display: none;position: fixed;left: 0;top:0;width: 100%; height: 100%;overflow: auto;background-color: rgba(0,0,0,0.55); justify-content:center;align-items: center;}
 .km-modal.active{ display: flex;}
 .km-modal-dialog{ background-color: #fff;position: relative;outline: 0;border-radius: 5px;width: 520px;padding: 45px 60px;text-align: center;}
@@ -176,4 +424,3 @@ body.modal-active{overflow: hidden;}
     .footer .retractable::after {content: url('/wp-content/uploads/2023/11/fleche-footer-bas.png');position: absolute;top:0px;right: 0px;width: 16px;height: 9px;transition: transform 0.3s ease;}
     .footer .retractable.active::after {content: url('/wp-content/uploads/2023/11/fleche-footer-haut.png');}
 }
-
